# pynco

./: .gitignore  .travis.yml  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml  runtests.sh  setup.cfg  setup.py
.github/workflows/: ci.yaml  publish-to-pypi.yaml
NCOpy/: nco.py  setup.py
NCOpy/tests/: conftest.py  test_nco.py  test_nco_examples.py
ci/: install.sh  requirements-2.6.txt  requirements-2.7.txt  requirements-2.7.yml  requirements-2.7_LOCALE.txt  requirements-3.10.yml  requirements-3.11.yml  requirements-3.12.yml  requirements-3.3.txt  requirements-3.4.txt  requirements-3.4.yml  requirements-3.5.txt  requirements-3.5.yml  requirements-3.6.txt  requirements-3.6.yml  requirements-3.7.yml  requirements-3.8.yml  requirements-3.9.yml
docs/: index.md  requirements.txt
nco/: __init__.py  custom.py  nco.py
python/: __init__.py  nco.py  setup.py
python/tests/: test_nco.py  test_nco_examples.py
tests/: conftest.py  test_nco.py  test_nco_examples.py
