[metadata]
name = nco
description = python bindings to NCO
version = 1.1.0
long_description = file: README.md
long_description_content_type = text/markdown
author = Joe Hamman
author_email = jhamman@ucar.edu
keywords = netcdf, climate
license = MIT
classifiers =
	Development Status :: 4 - Beta
	Topic :: Utilities
	Operating System :: POSIX
	Programming Language :: Python

project_urls =
	Source = https://github.com/nco/pynco

[options]
packages = find:
python_requires = >=3.7
install_requires =
	numpy
	packaging

[options.packages.find]
include =
	nco*
exclude =
	tests*
