[metadata]
name = nco
description = python bindings to NCO
version = 1.1.1
long_description = file: README.md
long_description_content_type = text/markdown
author = Joe Hamman
author_email = jhamman@ucar.edu
keywords = netcdf, climate
license = MIT
classifiers =
	Development Status :: 4 - Beta
	Topic :: Utilities
	Operating System :: POSIX
	Programming Language :: Python

project_urls =
	Source = https://github.com/nco/pynco
	Documentation = https://pynco.readthedocs.org

[options]
packages = find:
python_requires = >=3.8
install_requires =
	numpy
	packaging

[options.packages.find]
include =
	nco*
exclude =
	tests*

[tox:tox]
requires =
	# tox-conda does not yet support tox 4
	# https://github.com/tox-dev/tox-conda/issues/156
	tox < 4
	tox-conda

envlist =
	py38
	py39
	py310
	py311
	py312

isolated_build = true

[testenv]
conda_env =
	py38: ci/requirements-3.8.yml
	py39: ci/requirements-3.9.yml
	py310: ci/requirements-3.10.yml
	py311: ci/requirements-3.11.yml
	py312: ci/requirements-3.12.yml
conda_deps =
	nco
commands=
	pytest -vv {posargs}
